Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7852

test_hash_join_timer flakiness on s3 testing build

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 3.2.0
    • Impala 3.2.0
    • None
    • ghx-label-6

    Description

      test_hash_join_timer failed whereas it passed a previous s3 build on the same githash,i.e., no new commits added between them

      Test cases failing with

      query_test/test_hash_join_timer.py:143: in test_hash_join_timer
          strip1 = re.split("non-child: ", line)[1]
      E   IndexError: list index out of range
      

      Failing Queries:

      select /*+straight_join*/ count(*) from (select distinct * from functional.alltypes where int_col >= sleep(5)) a join /* +SHUFFLE */ functional.alltypes b on (a.id=b.id);
      
      select /*+straight_join*/ count(*) from functional.alltypes a join /* +SHUFFLE */  (select distinct * from functional.alltypes where int_col >= sleep(5)) b on (a.id=b.id);
      
      select /*+straight_join*/ count(*) from functional.alltypes a CROSS join  (select distinct * from functional.alltypes where int_col >= sleep(5)) b where a.id>b.id and a.id=99;
      

      Attachments

        Activity

          People

            kwho Michael Ho
            bikramjeet.vig Bikramjeet Vig
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: